# GameNetworkingExperiment

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml  linux.yml  windows.yml
bs/include/: base.h  enet.h  enet_fwd.h  host_client.h  packet.h  server.h  server_client.h  server_client_manager.h
bs/include/bs/: base.h  enet.h  host_client.h  packet.h  server.h  server_client.h  server_client_manager.h  utils.h
bs/src/: enet.cpp  host_client.cpp  packet.cpp  server.cpp  server_client_manager.cpp
examples/: CMakeLists.txt  base_game_host.h  game_messages.fbs  game_messages.h  test_client.cpp  test_server.cpp
examples/basic/: CMakeLists.txt  basic_client.cpp  basic_server.cpp
examples/pong/: CMakeLists.txt  base_game_host.h  config.h  game_messages.fbs  logic.cpp  logic.h  raylib.cmake
examples/pong/client/: client_state.cpp  client_state.h  pong_client.cpp
examples/pong/server/: pong_server.cpp
examples/pong/src/: base_game_host.h  config.h  pong_client.cpp
examples/simple/: CMakeLists.txt  base_game_host.h  simple_client.cpp  test_server.cpp
examples/simple/src/: base_game_host.h  simple_client.cpp  simple_server.cpp
src/: client.cpp  client.h  client_manager.cpp  client_manager.h  enet.cpp  enet.h  event.cpp  event.h  main.cpp  packet.cpp  packet.h  server.cpp  server.h  test_client.cpp  utils.h
src/client/: CMakeLists.txt  assets.cpp  assets.h  client.cpp  client.h  pong.cpp
src/clients/: base.h  host_client.cpp  host_client.h  server_client.h  server_client_manager.cpp  server_client_manager.h
src/messages/: messages.fbs
src/server/: CMakeLists.txt  server.cpp
src/shared/: state.cpp  state.h
